--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intro to CSS</title>
+    <title>Hw of Cascading</title>
     <style>
         h1,p{
             color: blueviolet;
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color:goldenrod;">Intro 2 CSS</h1>
+    <h1 style="color:goldenrod;">Cascading HW</h1>
     <h2 style="color: color(from color srgb r g b);">Cascading Style Sheets</h2>
     <p style="color: lightskyblue;">John</p>
     <h1>Turkey</h1>
